--- a/index.html
+++ b/index.html
@@ -169,69 +169,72 @@
 						</div>
 					</div>
 					<div class="content-bg" style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
-					<div class="row row-pt-md">
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-1">
-								<span class="icon">
-									<i class="icon-bulb"></i>
-								</span>
-								<div class="desc">
-									<h3>Programming Languages</h3>
-									<p>Java<br>
-										Python<br>
-										Perl<br>
-										Golang<br>
-									</p>
+						<div class="row row-pt-md">
+							<div class="col-md-4 text-center animate-box">
+								<div class="services color-1">
+									<span class="icon">
+										<i class="icon-bulb"></i>
+									</span>
+									<div class="desc">
+										<h3>Programming Languages</h3>
+										<p>Java<br>
+											Python<br>
+											Perl<br>
+											Golang<br>
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4 text-center animate-box">
+								<div class="services color-2">
+									<span class="icon">
+										<i class="icon-phone3"></i>
+									</span>
+									<div class="desc">
+										<h3>Web</h3>
+										<p>JavaScript (Node.js, Angular, jQuery)<br>
+											HTML5<br>
+											CSS (Bootstrap)</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4 text-center animate-box">
+								<div class="services color-3">
+									<span class="icon">
+										<i class="icon-data"></i>
+									</span>
+									<div class="desc">
+										<h3>Database</h3>
+										<p>MySQL, MongoDB</p>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-2">
-								<span class="icon">
-									<i class="icon-phone3"></i>
-								</span>
-								<div class="desc">
-									<h3>Web</h3>
-									<p>JavaScript (Node.js, Angular, jQuery)<br>
-										HTML5<br>
-										CSS (Bootstrap)</p>
+						<div class="row">
+							<div class="col-md-4 text-center animate-box">
+								<div class="services color-4">
+									<span class="icon">
+										<i class="icon-layers2"></i>
+									</span>
+									<div class="desc">
+										<h3>Tool</h3>
+										<p>Bash, PowerShell, Git, Gitlab CI, Docker, Jupiter Notebook</p>
+									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-3">
-								<span class="icon">
-									<i class="icon-data"></i>
-								</span>
-								<div class="desc">
-									<h3>Database</h3>
-									<p>MySQL, MongoDB</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-4">
-								<span class="icon">
-									<i class="icon-layers2"></i>
-								</span>
-								<div class="desc">
-									<h3>Tools</h3>
-									<p>Bash, PowerShell, Git, Gitlab CI, Docker, Jupiter Notebook</p>
+							<div class="col-md-4 text-center animate-box">
+								<div class="services color-5">
+									<span class="icon">
+										<i class="icon-phone3"></i>
+									</span>
+									<div class="desc">
+										<h3>Application</h3>
+										<p>RESTful API, Microservices, Distributed System</p>
+									</div>
 								</div>
 							</div>
 						</div>
 						<!-- <div class="col-md-4 text-center animate-box">
-							<div class="services color-5">
-								<span class="icon">
-									<i class="icon-data"></i>
-								</span>
-								<div class="desc">
-									<h3>Software</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
 							<div class="services color-6">
 								<span class="icon">
 									<i class="icon-phone3"></i>
@@ -243,7 +246,6 @@
 							</div>
 						</div> -->
 					</div>
-				</div>
 				</div>
 			</section>
 
@@ -262,24 +264,31 @@
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingOne">
 									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Bachelor Degree of Computer Engineering
+									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Bachelor Degree of Computer Engineering Co-op Program
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 									         <div class="panel-body">
-									            <div class="row">
-										      		<div class="col-md-6">
-										      			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-										      		</div>
-										      		<div class="col-md-6">
-										      			<p>This is where I learn programming is an extremely creative profession. It’s logic-based creativity.</p>
-										      		</div>
-										      	</div>
+												<h2>McGill University <span>Montreal, Quebec</span><span style="float:right">2013/09 - 2018/05</span></h2>
+												<p>This is where I learn programming is an extremely creative profession. It’s logic-based creativity.
+												</p>
+												Awards
+												<ul>
+													<li>Dean's Honour List and a cumulative GPA of 3.69/4.00</li>
+													<li>Engineering Class of 1953 SURE Award</li>
+													<li>Arthur Allan McAlear SURE Award</li>
+												</ul>
+									      		<!-- <div class="col-md-6">
+									      			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+									      		</div>
+									      		<div class="col-md-6">
+									      			<p>This is where I learn programming is an extremely creative profession. It’s logic-based creativity.</p>
+									      		</div> -->
 									         </div>
 									    </div>
 									</div>
-									<div class="panel panel-default">
+									<!-- <div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingTwo">
 									        <h4 class="panel-title">
 									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor Degree of Computer Science
@@ -295,7 +304,7 @@
 													</ul>
 									        </div>
 									    </div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</div>
