add project content

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 					               </div>
 					               <div class="timeline-label">
 					                  <h2>Robotic Team Mentor <span>at Montreal EMSB</span><span style="float:right">2019/04 - Recent</span></h2>
-					                  <p>● Programming mentor for FRC and FLL team<br>● </p>
+					                  <p>● Programming mentor for FRC and FLL team</p>
 					               </div>
 					            </div>
 					         </article>
@@ -447,7 +447,7 @@
 							<div class="blog-entry">
 								<a href="https://github.com/yan-ren/Speech-to-Text-DesignProject" class="blog-img"><img src="images/stt3.png" class="img-responsive" alt=""></a>
 								<div class="desc">
-									<span><small> </small> | <small> Inspiration </small> | </span>
+									<span><small></small> | <small> Inspiration </small> | </span>
 									<h3><a href="https://github.com/yan-ren/Speech-to-Text-DesignProject">Web-based Speech to Text Application</a></h3>
 									<p>Use Node.js backend with Google Cloud Storage and Google Cloud Speech API, collaborating with Radio Canada Digital R&D team to develop a web based speech-to-text application</p>
 								</div>
@@ -455,21 +455,21 @@
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="https://yan-ren.github.io/FLL2018_Team_JSL/index.html" class="blog-img"><img src="images/fll_web.png" class="img-responsive" alt=""></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Wordpress for a Beginner</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<span><small></small> | <small> Web Design </small> | </span>
+									<h3><a href="blog.html">FLL team space webpage</a></h3>
+									<p>Native HTML, CSS, JavaScript webpage for hosting FLL team competition pictures and viedos</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="https://github.com/yan-ren/CCC" class="blog-img"><img src="images/cp.jpg" class="img-responsive" alt=""></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Inspiration </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Make website from scratch</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<span><small></small> | <small> Inspiration </small> | </span>
+									<h3><a href="blog.html">Competitive Programming</a></h3>
+									<p>Various solutions for Canadian Computing Competition and Algorithm & Data Structure questions</p>
 								</div>
 							</div>
 						</div>
@@ -477,11 +477,11 @@
 					<div class="row" id="load-more" style="display: none;">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="blog.html" class="blog-img"><img src="images/opencv.jpg" class="img-responsive" alt=""></a>
 								<div class="desc">
-									<span><small> </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Renovating National Gallery</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<span><small></small> | <small> Inspiration </small> | </span>
+									<h3><a href="blog.html">OpenCV Face Recognition and Pose Estimation</a></h3>
+									<p>Used OpenCV in C++, implemented Eigenfaces, Local Binary Pattern histograms and Bag of Visual Words for face recognition and pose estimation.</p>
 								</div>
 							</div>
 						</div>
