--- a/resume.html
+++ b/resume.html
@@ -28,12 +28,12 @@
                 </a>
             </div>
             <div style="float: right;">
-                <a id="printableView" target="_blank" href="./CV.pdf" style="text-decoration: none;">
+                <a id="printableView" target="_blank" href="./Yan_CV.pdf" style="text-decoration: none;">
                     <img src="./images/pdf-icon.png" style="height: 30px; vertical-align: middle;" /><span style="margin-left: 5px; font-weight: bold;">Printable View</span>
                 </a>
             </div>
             <br />
-            <embed src="./CV.pdf" style="width: 850px; height: 1150px; margin-top: 20px;" />
+            <embed src="./Yan_CV.pdf" style="width: 850px; height: 1150px; margin-top: 20px;" />
         </div>
     </div>
 </body>
