add project content

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 									</span>
 									<div class="desc">
 										<h3>Tool</h3>
-										<p>Bash, PowerShell, Git, Gitlab CI, Docker, Jupiter Notebook</p>
+										<p>Bash, PowerShell, Git, Docker, Jupiter Notebook</p>
 									</div>
 								</div>
 							</div>
@@ -229,7 +229,7 @@
 									</span>
 									<div class="desc">
 										<h3>Application</h3>
-										<p>RESTful API, Microservices, Distributed System</p>
+										<p>RESTful API, CI/CD, Microservices, Distributed System</p>
 									</div>
 								</div>
 							</div>
@@ -394,7 +394,7 @@
 				    </div>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<h2 class="heading animate-box">Extracurricular Experience</h2>
+							<h2 class="heading animate-box">Interests</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -477,7 +477,7 @@
 					<div class="row" id="load-more" style="display: none;">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/opencv.jpg" class="img-responsive" alt=""></a>
+								<a href="https://github.com/yan-ren/ComputerVision" class="blog-img"><img src="images/opencv.jpg" class="img-responsive" alt=""></a>
 								<div class="desc">
 									<span><small></small> | <small> Inspiration </small> | </span>
 									<h3><a href="blog.html">OpenCV Face Recognition and Pose Estimation</a></h3>
@@ -487,15 +487,15 @@
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="https://github.com/yan-ren/pygame_development" class="blog-img"><img src="images/pygame.png" class="img-responsive" alt=""></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Wordpress for a Beginner</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<span><small></small> | <small> Inspiration </small> | </span>
+									<h3><a href="blog.html">Python Pygame Development</a></h3>
+									<p>Writing game in Pygame library.</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
+						<!-- <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
 								<a href="blog.html" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
@@ -504,7 +504,7 @@
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box">
